--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
         </nav>
     </header>
 
+    <!-- Game area -->
     <div class="container-fluid game-area-container">
-        
+
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
