--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <!-- Navigation -->
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <a class="navbar-brand" href="index.html">Blackjack</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -39,10 +40,36 @@
 
     <!-- Game area -->
     <div class="container-fluid game-area-container">
+        <div class="row start-game-container justify-content-center">
+            <button type="button" class="btn btn-primary btn-lg">Start Game</button>
+            
+            <img src="assets/images/Red_back.jpg" alt="Deck of cards" class="" height="200">
+            <button type="button" class="btn btn-primary btn-lg">How to Play</button>
+        </div>
+        <div class="row justify-content-center" id="dealer-hand">
+            <img src="assets/images/Red_back.jpg" class="d-none" alt="" height="100">
+            <img src="assets/images/Red_back.jpg" class="d-none" alt="" height="100">
+        </div>
+        <div class="row score-choice-deck-container d-none">
+            <div class="col-4 score-keeper">
+                <p class="scores">Player hands won: <span id="player-h-won">0</span></p>
+                <p class="scores">Dealer hands won: <span id="dealer-h-won">0</span></p>
+            </div>
+            <div class="col-4 choice-area"></div>
+            <div class="col-4">
+                <img src="assets/images/Red_back.jpg" class="float-right" alt="Deck of cards" height="100">
+            </div>
+        </div>
+        <div class="row justify-content-center fixed-bottom" id="player-hand">
+            <img src="assets/images/Red_back.jpg" class="d-none" alt="" height="200">
+            <img src="assets/images/Red_back.jpg" class="d-none" alt="" height="200">
 
+        </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
