--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <button type="button" class="btn btn-primary btn-lg">How to Play</button>
         </div>
         <div class="row justify-content-center d-none" id="dealer-hand">
-            <img src="assets/images/Red_back.jpg" class="" alt="" height="100">
-            <img src="assets/images/Red_back.jpg" class="" alt="" height="100">
+            <img src="assets/images/Red_back.jpg" class="" alt="" height="200">
+            <img src="assets/images/Red_back.jpg" class="" alt="" height="200">
         </div>
         <div class="row score-choice-deck-container d-none">
             <div class="col-4 score-keeper">
@@ -56,14 +56,10 @@
             </div>
             <div class="col-4 choice-area"></div>
             <div class="col-4">
-                <img src="assets/images/Red_back.jpg" class="float-right" alt="Deck of cards" height="100">
+                <img src="assets/images/Red_back.jpg" class="float-right" alt="Deck of cards" height="200">
             </div>
         </div>
-        <div class="row justify-content-center fixed-bottom d-none" id="player-hand">
-            <img src="assets/images/Red_back.jpg" class="" alt="" height="200">
-            <img src="assets/images/Red_back.jpg" class="" alt="" height="200">
-
-        </div>
+        <div class="row justify-content-center fixed-bottom d-none" id="player-hand"></div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
