added function to calculate the sum of a hand

--- a/index.html
+++ b/index.html
@@ -45,10 +45,7 @@
             <img src="assets/images/Red_back.jpg" alt="Deck of cards" class="" height="200">
             <button type="button" class="btn btn-primary btn-lg">How to Play</button>
         </div>
-        <div class="row justify-content-center d-none" id="dealer-hand">
-            <img src="assets/images/Red_back.jpg" class="" alt="" height="200">
-            <img src="assets/images/Red_back.jpg" class="" alt="" height="200">
-        </div>
+        <div class="row justify-content-center d-none" id="dealer-hand"></div>
         <div class="row score-choice-deck-container d-none">
             <div class="col-4 score-keeper">
                 <p class="scores">Player hands won: <span id="player-h-won">0</span></p>
