style changes, updated readme, game can deal/display cards and check for blackjack then increment score. need to figure out how im going to hit player hand from same deck

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <p class="scores">Player hands won: <span id="player-h-won">0</span></p>
                 <p class="scores">Dealer hands won: <span id="dealer-h-won">0</span></p>
             </div>
-            <div class="col-4 choice-area"></div>
+            <div class="col-4 choice-area d-flex justify-content-center"></div>
             <div class="col-4">
                 <img src="assets/images/Red_back.jpg" class="float-right" alt="Deck of cards" height="200">
             </div>
