added content to how to play page

--- a/howtoplay.html
+++ b/howtoplay.html
@@ -55,7 +55,7 @@
                                 <br>Picture cards, Jack/Queen/King, count as 10 so a hand of 10 of Hearts and King of Spades will equate to 20
                                 <br>Aces can count as 11 or 1 depending on the sum of your hand, this is done automatically
                                 <br>If your hand consists of one card equal to 10 and an Ace you just got a Blackjack and instantly win the round!
-                                <br>Unless the dealer has a Blackjack too, in which case the hand is tied
+                                <br>Unless the dealer has a Blackjack too, in which case the hand is a draw
                             </p>
                         </div>
                         <div class="carousel-item text-center">
@@ -65,11 +65,22 @@
                                 <br>Hit will add another card from the deck to your hand
                                 <br>You can hit as many times as you want but be careful, you don't want to go bust!
                                 <br>Once you're happy with your hand you can stand
+                                <br>It's a good idea to look at the card the dealer is showing and strategize
+                                <br>If the dealer is showing a 10 and your hand adds up to 16 it would be a good idea to hit
+                                <br>Although if the dealer's showing a 4 it might not be such a good idea to hit
                             </p>
                         </div>
                         <div class="carousel-item text-center">
-                            <h2 class="rules-header"></h2>
-                            <p class="rules-paragraph">Slide three</p>
+                            <h2 class="rules-header">Deciding the Winner</h2>
+                            <p class="rules-paragraph">Once the hands have been dealt and the player has chosen hit or stand the winner is decided
+                                <br>However, first the dealer must either hit or stand
+                                <br>The dealer has to hit on 16 and can not strategize by looking at the player's hand
+                                <br>Even if the player goes bust the dealer must hit until his hand is equal to at least 17
+                                <br>If both the dealer and player go bust the round is a draw
+                                <br>If either the dealer or player go bust whilst the other's hand is equal to or less than 21 the busted player loses
+                                <br>If both hands are less than or equal to 21 the winner is decided by the higher hand
+                                <br>Once the round is over the score is tallied and you can click the button to play again
+                            </p>
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
