--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,62 @@
 
     <div class="container-fluid contact-container">
         <div class="row">
-            <div class="col"></div>
+            <div class="col">
+                <h1 class="page-header text-center">Contact Us</h1>
+            </div>
+        </div>
+        <div class="contact-form-container mx-auto">
+            <div class="row">
+                <div class="col mt-2">
+                    <h3 class="form-header text-center">Report a bug, ask a question</h3>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <form class="p-2 text-center">
+                    <div class="form-row mt-3">
+                        <div class="form-group col-md-6">
+                            <label for="user-input-email" class="form-label">Email Address</label>
+                            <input type="email" class="form-control" id="user-input-email" placeholder="Required"
+                                aria-describedby="email-help" required>
+                            <div id="email-help" class="form-text"><small class="text-muted">Your email address is confidential</small></div>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label for="user-input-name" class="form-label">Your name</label>
+                            <input type="text" class="form-control" id="user-input-name" placeholder="Optional"
+                                aria-describedby="name-help">
+                            <div id="name-help" class="form-text sr-only">Enter your name. This is optional</div>
+                        </div>
+                        <div class="form-group col-12">
+                            <label for="user-text-area" class="form-label">Write your message here</label>
+                            <textarea class="form-control" id="user-text-area" placeholder="Required..." rows="15" aria-describedby="text-area-help" required></textarea>
+                            <div id="text-area-help" class="form-text sr-only">Write your message here</div>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+            <!--<div class="row">
+                <div class="col">
+                    <form class="text-center">
+                        <div class="mb-2">
+                            <label for="user-input-email" class="form-label">Email Address</label>
+                            <input type="email" class="form-control" id="user-input-email" placeholder="Required" aria-describedby="email-help" required>
+                            <div id="email-help" class="form-text">Your email address is confidential</div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="user-input-name" class="form-label">Your name</label>
+                            <input type="text" class="form-control" id="user-input-name" placeholder="Optional" aria-describedby="name-help">
+                            <div id="name-help" class="form-text sr-only">Enter your name. This is optional</div>
+                        </div>
+                        <div class="mb-4">
+                            <label for="user-text-area" class="form-label">Write your message here</label>
+                            <textarea class="form-control" id="user-text-area" placeholder="Required... Write your message here" rows="10" aria-describedby="text-area-help" required></textarea>
+                            <div id="text-area-help" class="form-text sr-only">Write your message here</div>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+                </div>
+            </div>-->
         </div>
     </div>
 
