--- a/howtoplay.html
+++ b/howtoplay.html
@@ -44,54 +44,50 @@
         </div>
         <div class="row rules-container mx-auto">
             <div class="col">
-                <div class="carousel slide" id="carouselControls" data-interval="false">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active text-center">
-                            <h2 class="rules-header">Dealing</h2>
-                            <p class="rules-paragraph">To start the game, click on the start game button<br>This game uses only one
-                                deck with two hands of two cards dealt to the player and dealer
-                                <br>The goal of Blackjack is to get your hand as close to 21 without going over
-                                <br>You are playing against the dealer so whoever has the highest hand, without going bust (over 21), wins the hand!
-                                <br>Picture cards, Jack/Queen/King, count as 10 so a hand of 10 of Hearts and King of Spades will equate to 20
-                                <br>Aces can count as 11 or 1 depending on the sum of your hand, this is done automatically
-                                <br>If your hand consists of one card equal to 10 and an Ace you just got a Blackjack and instantly win the round!
-                                <br>Unless the dealer has a Blackjack too, in which case the hand is a draw
-                            </p>
-                        </div>
-                        <div class="carousel-item text-center">
-                            <h2 class="rules-header">Hit or Stand</h2>
-                            <p class="rules-paragraph">Once the initial hands have been dealt, without a Blackjack, the game moves to phase two
-                                <br>The player now has a choice to hit or stand
-                                <br>Hit will add another card from the deck to your hand
-                                <br>You can hit as many times as you want but be careful, you don't want to go bust!
-                                <br>Once you're happy with your hand you can stand
-                                <br>It's a good idea to look at the card the dealer is showing and strategize
-                                <br>If the dealer is showing a 10 and your hand adds up to 16 it would be a good idea to hit
-                                <br>Although if the dealer's showing a 4 it might not be such a good idea to hit
-                            </p>
-                        </div>
-                        <div class="carousel-item text-center">
-                            <h2 class="rules-header">Deciding the Winner</h2>
-                            <p class="rules-paragraph">Once the hands have been dealt and the player has chosen hit or stand the winner is decided
-                                <br>However, first the dealer must either hit or stand
-                                <br>The dealer has to hit on 16 and can not strategize by looking at the player's hand
-                                <br>Even if the player goes bust the dealer must hit until his hand is equal to at least 17
-                                <br>If both the dealer and player go bust the round is a draw
-                                <br>If either the dealer or player go bust whilst the other's hand is equal to or less than 21 the busted player loses
-                                <br>If both hands are less than or equal to 21 the winner is decided by the higher hand
-                                <br>Once the round is over the score is tallied and you can click the button to play again
-                            </p>
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous slide</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselControls" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next slide</span>
-                    </a>
-                </div>
+                <h2 class="rules-header text-center">Dealing</h2>
+                <p class="rules-paragraph">1) To start the game, click on the start game button<br>2) This game uses only one
+                    deck with two hands of two cards dealt to the player and dealer
+                    <br>3) The goal of Blackjack is to get your hand as close to 21 without going over
+                    <br>4) You are playing against the dealer so whoever has the highest hand, without going bust (over
+                    21), wins the hand!
+                    <br>5) Picture cards, Jack/Queen/King, count as 10 so a hand of 10 of Hearts and King of Spades will
+                    equate to 20
+                    <br>6) Aces can count as 11 or 1 depending on the sum of your hand, this is done automatically
+                    <br>7) If your hand consists of one card equal to 10 and an Ace you just got a Blackjack and instantly
+                    win the round!
+                    <br>8) Unless the dealer has a Blackjack too, in which case the hand is a draw
+                </p>
+            </div>
+        </div>
+        <div class="row rules-container mx-auto">
+            <div class="col">
+                <h2 class="rules-header text-center">Hit or Stand</h2>
+                <p class="rules-paragraph">1) Once the initial hands have been dealt, without a Blackjack, the game moves
+                    to phase two
+                    <br>2) The player now has a choice to hit or stand
+                    <br>3) Hit will add another card from the deck to your hand
+                    <br>4) You can hit as many times as you want but be careful, you don't want to go bust!
+                    <br>5) Once you're happy with your hand you can stand
+                    <br>6) It's a good idea to look at the card the dealer is showing and strategize
+                    <br>7) If the dealer is showing a 10 and your hand adds up to 16 it would be a good idea to hit
+                    <br>8) Although if the dealer's showing a 4 it might not be such a good idea to hit
+                </p>
+            </div>
+        </div>
+        <div class="row rules-container mx-auto">
+            <div class="col">
+                <h2 class="rules-header text-center">Deciding the Winner</h2>
+                <p class="rules-paragraph">1) Once the hands have been dealt and the player has chosen hit or stand the
+                    winner is decided
+                    <br>2) However, first the dealer must either hit or stand
+                    <br>3) The dealer has to hit on 16 and can not strategize by looking at the player's hand
+                    <br>4) Even if the player goes bust the dealer must hit until his hand is equal to at least 17
+                    <br>5) If both the dealer and player go bust the round is a draw
+                    <br>6) If either the dealer or player go bust whilst the other's hand is equal to or less than 21 the
+                    busted player loses
+                    <br>7) If both hands are less than or equal to 21 the winner is decided by the higher hand
+                    <br>8) Once the round is over the score is tallied and you can click the button to play again
+                </p>
             </div>
         </div>
     </div>
