media queries and new responsive button class to try make the site work better on smaller screen sizes

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             <h1 class="page-header">Welcome to Blackjack</h1>
         </div>
         <div class="row start-game-container justify-content-center">
-            <button type="button" class="btn btn-primary btn-lg" id="btn-start-game">Start Game</button>
+            <button type="button" class="btn btn-primary btn-lg btn-responsive" id="btn-start-game">Start Game</button>
             <img src="assets/images/Red_back.jpg" alt="Deck of cards" class="d-none d-sm-block" height="200">
-            <button type="button" class="btn btn-primary btn-lg" id="how-to-play-btn">How to Play</button>
+            <button type="button" class="btn btn-primary btn-lg btn-responsive" id="how-to-play-btn">How to Play</button>
         </div>
         <div class="row justify-content-center d-none" id="dealer-hand"></div>
         <div class="row score-choice-deck-container d-none">
