--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+        (function () {
+            emailjs.init("user_mW9Sx6AHjdEoEaFI6A9x4");
+        })();
+    </script>
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 
@@ -53,19 +60,21 @@
                     <div class="form-row mt-3">
                         <div class="form-group col-md-6">
                             <label for="user-input-email" class="form-label">Email Address</label>
-                            <input type="email" class="form-control" id="user-input-email" name="emailaddress" placeholder="Required"
-                                aria-describedby="email-help" required>
-                            <div id="email-help" class="form-text"><small class="text-muted">Your email address is confidential</small></div>
+                            <input type="email" class="form-control" id="user-input-email" name="emailaddress"
+                                placeholder="Required" aria-describedby="email-help" required>
+                            <div id="email-help" class="form-text"><small class="text-muted">Your email address is
+                                    confidential</small></div>
                         </div>
                         <div class="form-group col-md-6">
                             <label for="user-input-name" class="form-label">Your name</label>
-                            <input type="text" class="form-control" id="user-input-name" name="name" placeholder="Optional"
-                                aria-describedby="name-help">
+                            <input type="text" class="form-control" id="user-input-name" name="name"
+                                placeholder="Optional" aria-describedby="name-help">
                             <div id="name-help" class="form-text sr-only">Enter your name. This is optional</div>
                         </div>
                         <div class="form-group col-12">
                             <label for="user-text-area" class="form-label">Write your message here</label>
-                            <textarea class="form-control" id="user-text-area" name="message" placeholder="Required..." rows="15" aria-describedby="text-area-help" required></textarea>
+                            <textarea class="form-control" id="user-text-area" name="message" placeholder="Required..."
+                                rows="15" aria-describedby="text-area-help" required></textarea>
                             <div id="text-area-help" class="form-text sr-only">Write your message here</div>
                         </div>
                     </div>
@@ -75,10 +84,10 @@
         </div>
     </div>
 
-    <script src="assets/js/formSendEmail.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
         crossorigin="anonymous"></script>
+    <script src="assets/js/formSendEmail.js"></script>
 </body>
 
 </html>
