made the how to play page simpler, also more mobile/tablet friendly

--- a/howtoplay.html
+++ b/howtoplay.html
@@ -43,6 +43,35 @@
             </div>
         </div>
         <div class="row rules-container mx-auto">
+            <div class="col-xl-4">
+                <h2 class="rules-header text-center">Dealing</h2>
+                <p class="rules-paragraph">
+                    1) To start the game, click on the start game button
+                    <br>2) The aim of Blackjack is to get your cards to add up to 21
+                    <br>3) Jack/Queen/King count as 10
+                    <br>4) Aces count as 1 or 11 depending on the sum of your hand
+                    <br>5) If you have an ace and a card with a value of 10 that's a Blackjack and you win!
+                </p>
+            </div>
+            <div class="col-xl-4">
+                <h2 class="rules-header text-center">Hit or Stand</h2>
+                <p class="rules-paragraph">
+                    1) Once the initial hands have been dealt, without a Blackjack, the game moves to phase two
+                    <br>2) You now have a choice to hit (add another card to your hand) or stand
+                    <br>3) It's a good idea to look at the dealer's shown card and strategize
+                    <br>4) Once you are happy with your hand you can stand and the winner is decided
+                </p>
+            </div>
+            <div class="col-xl-4">
+                <h2 class="rules-header text-center">Deciding the winner</h2>
+                <p class="rules-paragraph">
+                    1) Before deciding the winner the dealer must hit or stand
+                    <br>2) The dealer has to hit on 16 no matter what
+                    <br>3) Once the dealer has finished the player with the highest hand under 21 wins!
+                </p>
+            </div>
+        </div>
+        <!--<div class="row rules-container mx-auto">
             <div class="col">
                 <h2 class="rules-header text-center">Dealing</h2>
                 <p class="rules-paragraph">1) To start the game, click on the start game button<br>2) This game uses only one
@@ -89,7 +118,7 @@
                     <br>8) Once the round is over the score is tallied and you can click the button to play again
                 </p>
             </div>
-        </div>
+        </div>-->
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
