changed layout of how to play page and restyled. updated readme

--- a/howtoplay.html
+++ b/howtoplay.html
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div class="row rules-container mx-auto">
-            <div class="col-xl-4">
+            <div class="col-xl-4 rule-section">
                 <h2 class="rules-header text-center">Dealing</h2>
                 <p class="rules-paragraph">
                     1) To start the game, click on the start game button
@@ -53,7 +53,7 @@
                     <br>5) If you have an ace and a card with a value of 10 that's a Blackjack and you win!
                 </p>
             </div>
-            <div class="col-xl-4">
+            <div class="col-xl-4 rule-section">
                 <h2 class="rules-header text-center">Hit or Stand</h2>
                 <p class="rules-paragraph">
                     1) Once the initial hands have been dealt, without a Blackjack, the game moves to phase two
@@ -62,63 +62,15 @@
                     <br>4) Once you are happy with your hand you can stand and the winner is decided
                 </p>
             </div>
-            <div class="col-xl-4">
+            <div class="col-xl-4 rule-section">
                 <h2 class="rules-header text-center">Deciding the winner</h2>
                 <p class="rules-paragraph">
                     1) Before deciding the winner the dealer must hit or stand
-                    <br>2) The dealer has to hit on 16 no matter what
+                    <br>2) The dealer has to hit on 16
                     <br>3) Once the dealer has finished the player with the highest hand under 21 wins!
                 </p>
             </div>
         </div>
-        <!--<div class="row rules-container mx-auto">
-            <div class="col">
-                <h2 class="rules-header text-center">Dealing</h2>
-                <p class="rules-paragraph">1) To start the game, click on the start game button<br>2) This game uses only one
-                    deck with two hands of two cards dealt to the player and dealer
-                    <br>3) The goal of Blackjack is to get your hand as close to 21 without going over
-                    <br>4) You are playing against the dealer so whoever has the highest hand, without going bust (over
-                    21), wins the hand!
-                    <br>5) Picture cards, Jack/Queen/King, count as 10 so a hand of 10 of Hearts and King of Spades will
-                    equate to 20
-                    <br>6) Aces can count as 11 or 1 depending on the sum of your hand, this is done automatically
-                    <br>7) If your hand consists of one card equal to 10 and an Ace you just got a Blackjack and instantly
-                    win the round!
-                    <br>8) Unless the dealer has a Blackjack too, in which case the hand is a draw
-                </p>
-            </div>
-        </div>
-        <div class="row rules-container mx-auto">
-            <div class="col">
-                <h2 class="rules-header text-center">Hit or Stand</h2>
-                <p class="rules-paragraph">1) Once the initial hands have been dealt, without a Blackjack, the game moves
-                    to phase two
-                    <br>2) The player now has a choice to hit or stand
-                    <br>3) Hit will add another card from the deck to your hand
-                    <br>4) You can hit as many times as you want but be careful, you don't want to go bust!
-                    <br>5) Once you're happy with your hand you can stand
-                    <br>6) It's a good idea to look at the card the dealer is showing and strategize
-                    <br>7) If the dealer is showing a 10 and your hand adds up to 16 it would be a good idea to hit
-                    <br>8) Although if the dealer's showing a 4 it might not be such a good idea to hit
-                </p>
-            </div>
-        </div>
-        <div class="row rules-container mx-auto">
-            <div class="col">
-                <h2 class="rules-header text-center">Deciding the Winner</h2>
-                <p class="rules-paragraph">1) Once the hands have been dealt and the player has chosen hit or stand the
-                    winner is decided
-                    <br>2) However, first the dealer must either hit or stand
-                    <br>3) The dealer has to hit on 16 and can not strategize by looking at the player's hand
-                    <br>4) Even if the player goes bust the dealer must hit until his hand is equal to at least 17
-                    <br>5) If both the dealer and player go bust the round is a draw
-                    <br>6) If either the dealer or player go bust whilst the other's hand is equal to or less than 21 the
-                    busted player loses
-                    <br>7) If both hands are less than or equal to 21 the winner is decided by the higher hand
-                    <br>8) Once the round is over the score is tallied and you can click the button to play again
-                </p>
-            </div>
-        </div>-->
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
