altered how to play page and styled. fixed form clear after submission

--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
                 </div>
             </div>
             <div class="row justify-content-center">
-                <form class="p-2 text-center" onsubmit="return sendEmail(this);">
+                <form class="p-2 text-center" id="user-form" onsubmit="return sendEmail(this);">
                     <div class="form-row mt-3">
                         <div class="form-group col-md-6">
                             <label for="user-input-email" class="form-label">Email Address</label>
