--- a/howtoplay.html
+++ b/howtoplay.html
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div class="row rules-container mx-auto">
-            <div class="col-xl-4 rule-section">
+            <div class="col-xl-4 rule-section border border-success rounded">
                 <h2 class="rules-header text-center">Dealing</h2>
                 <p class="rules-paragraph">
                     1) To start the game, click on the start game button
@@ -53,7 +53,7 @@
                     <br>5) If you have an ace and a card with a value of 10 that's a Blackjack and you win!
                 </p>
             </div>
-            <div class="col-xl-4 rule-section">
+            <div class="col-xl-4 rule-section border border-success rounded">
                 <h2 class="rules-header text-center">Hit or Stand</h2>
                 <p class="rules-paragraph">
                     1) Once the initial hands have been dealt, without a Blackjack, the game moves to phase two
@@ -62,7 +62,7 @@
                     <br>4) Once you are happy with your hand you can stand and the winner is decided
                 </p>
             </div>
-            <div class="col-xl-4 rule-section">
+            <div class="col-xl-4 rule-section border border-success rounded">
                 <h2 class="rules-header text-center">Deciding the winner</h2>
                 <p class="rules-paragraph">
                     1) Before deciding the winner the dealer must hit or stand
