--- a/contact.html
+++ b/contact.html
@@ -7,12 +7,18 @@
     <title>Contact Us | Blackjack</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/80fd661972.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 
 <body>
 
     <div class="container-fluid contact-container">
+        <div class="row">
+            <div class="col float-left">
+                <a href="index.html" class="home-link"><i class="fas fa-home"></i></a>
+            </div>
+        </div>
         <div class="row">
             <div class="col">
                 <h1 class="page-header text-center">Contact Us</h1>
