added bootstrap modal to submit email form

--- a/index.html
+++ b/index.html
@@ -33,10 +33,7 @@
         <div class="row justify-content-center d-none" id="dealer-hand"></div>
         <p class="scores d-none">Dealer hands won: <span id="dealer-h-won">0</span></p>
         <div class="row score-choice-deck-container d-none">
-            <div class="col-4 score-keeper">
-                <!--<p class="scores">Dealer hands won: <span id="dealer-h-won">0</span></p>
-                <p class="scores">Player hands won: <span id="player-h-won">0</span></p>-->
-            </div>
+            <div class="col-4 score-keeper"></div>
             <div class="col-4 choice-area d-flex justify-content-center"></div>
             <div class="col-4"></div>
         </div>
