--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     <div class="container-fluid contact-container">
         <div class="row">
             <div class="col float-left">
-                <a href="index.html" class="home-link"><i class="fas fa-home"></i></a>
+                <a href="index.html" class="home-link" aria-label="Home"><i class="fas fa-home"></i></a>
             </div>
         </div>
         <div class="row">
@@ -53,8 +53,24 @@
                             <div id="text-area-help" class="form-text sr-only">Write your message here</div>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-primary" data-toggle="modal" data-target="#form-modal">Submit</button>
                 </form>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal" id="form-modal" tabindex="-1" aria-labelledby="form-modal-label" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Submitted</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Thank you for your message</p>
+                </div>
             </div>
         </div>
     </div>
